Changes related to Feign Client and Tested few interfaces